
              Perl programs: make them shell programs that reinvoke themselves
              as perl so we can get the Perl interpreter from the PATH.

              yuvtoppm: check for inconsistencies between specified
              width and height and size of input.

              411toppm: check for inconsistencies between specified
              width and height and size of input.

              giftopnm: fix bug: erroneously claims GIF ends prematurely.
              Broken in Netpbm 10.38 (March 2007).  This affects all GIFs, but
              the problem does not manifest when Netpbm was built with Gcc
              from 2007 and later.

              pnmtops: Fix bug: only first image gets converted.  Broken in
              Netpbm 10.56 (September 2011).

              pnmtopng: fix bug: incorrect output when output should have
              an alpha mask.  Broken in Netpbm 10.55 (June 2011).  Thanks
              Ludolf Holzheid (lholzheid@bihl-wiedemann.de).

              pnmtopng: fix bug: output bigger than it needs to be when the
              input is a color format image that contains only gray.  Broken
              since at least Netpbm 10.26 (May 2001), but after 10.18
              (September 2003).  Thanks Ludolf Holzheid
              (lholzheid@bihl-wiedemann.de).

              pnmremap (ergo pnmquant): fix bug: incorrect output with
              -norandom and floyd-steinberg dithering.  Always broken.
              (-norandom was introduced in Netpbm 10.39 (June 2007)).

              pamtilt: fix bug: incorrect output or invalid memory access
              crash.  Always broken (program was new in Netpbm 10.30
              (October 2005)).

              pnmpsnr: fix bug: says types aren't the same when they are.
              Introduced in Netpbm 10.61 (December 2012).
              
              ppmtowinicon: fix bug: sometimes creates image truncated in the
              middle of the AND mask.  Always broken (program was new in